--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    height: 35%;
+    height: 40%;
     background-color: aqua;
     border-radius: 10px;
     gap: 10px;
@@ -107,4 +107,34 @@
     font-size: larger;
     border-radius: 5px;
     background-color: rgb(218, 215, 218);
+}
+
+.guessField{
+    width: 15%;
+    height: 40px;
+    border-radius: 5px;
+    font-size: 25px;
+    text-align: center;
+    background-color: cornsilk;
+}
+
+.buttonDiv {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 40%;
+    height: 30%;
+    background-color: brown;
+    margin-top: 10px;
+    background-color: rgb(215, 17, 17);
+}
+
+.guessContainer {
+    width: 35%;
+    height: 13%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    border: 2px solid black;
+    margin-bottom: 5px;
 }
