--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    background-color: black;
 }
 
 .instruction-container{
@@ -50,7 +51,7 @@
     align-items: center;
     width: 70%;
     height: 40%;
-    background-color: aqua;
+    background-color:#1E90FF;
     border-radius: 10px;
     gap: 10px;
 }
@@ -59,6 +60,8 @@
     width: 35%;
     height: 15%;
     border-radius: 8px;
+    font-size: larger;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: rgb(10, 255, 10);
 }
 
@@ -70,17 +73,18 @@
 .history-container{
     justify-items: center;
     margin-left: auto;
-    background-color: yellow;
     width: 25%;
     padding-top:10px;
     overflow-y: auto;
+    transition: background-color 1s ease;
+    color: white;
 }
 
 .win{
-    color: green;
+    color: limegreen;
 }
 .lost{
-    color: red;
+    color: rgb(227, 60, 60);
 }
 
 .userField{
@@ -88,6 +92,7 @@
     height: 40px;
     border-radius: 5px;
     font-size: larger;
+    font-weight: bold;
 }
 
 .submitButton{
@@ -96,7 +101,7 @@
     border-radius: 5px;
     background-color: lime;
     font-size: large;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .submitButton:hover {
@@ -113,6 +118,7 @@
     width: 100px;
     height: 30px;
     font-size: larger;
+    font-weight: bold;
     border-radius: 5px;
     background-color: rgb(218, 215, 218);
 }
@@ -122,6 +128,7 @@
     height: 40px;
     border-radius: 5px;
     font-size: 25px;
+    font-weight: bold;
     text-align: center;
     background-color: cornsilk;
 }
@@ -181,8 +188,34 @@
     width: 75%;
     height: 28%;
     margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border-radius: 10px;
     padding: 5px;
     border: 3px solid black;
+    box-shadow: 5px 5px 1px 0px rgba(0, 0, 0, 0.3);
+    transform: translateY(30px); 
+    opacity: 0; 
+    transition: transform 0.5s ease, opacity 0.5s ease; 
+}
+
+.historyDiv.active {
+    transform: translateY(0); /* Moves to its actual position */
+    opacity: 1;
+}
+.enter {
+    background-color: 'limegreen';
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: large;
+}
+
+.backSpace {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: red;
+    font-size: large;
+}
+
+.digits {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: yellow;
+    font-size: large;
 }
