--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    background-color: black;
+    /* background-color: black; */
 }
 
 .instruction-container{
@@ -20,9 +20,12 @@
     align-items: center;
     margin-right: auto;
     width: 25%;
-    background-color: red;
-    gap: 10px
+    background-color: black;
+    color: white;
+    gap: 10px;
+    transition: background-color 1s ease;
 }
+
 
 #instructionbtn {
     width: 45%;
@@ -41,6 +44,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: goldenrod;
     width: 50%;
 }
 
@@ -76,6 +80,7 @@
     width: 25%;
     padding-top:10px;
     overflow-y: auto;
+    background-color: black;
     transition: background-color 1s ease;
     color: white;
 }
@@ -218,4 +223,9 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: yellow;
     font-size: large;
+}
+
+.instruction-container-hover{
+    background-color: aqua;
+    transition: background-color 1s ease;
 }
