--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     align-items: center;
     margin-right: auto;
     width: 25%;
-    background-color:#FFA559;
+    background-color:#5E60CE;
     color: white;
     gap: 10px;
     transition: background-color 1s ease;
